syntax= "proto3";

package authentication;
option go_package="domain/events";

message CreateProfileRequest {
    string messageType= 1;

    string name= 2;
    string email= 3;
}