syntax= "proto3";

package authentication;
option go_package="domain/events";

message SendOTPRequest {
    string messageType= 1;

    string email= 2;
}